--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Welcome to My GitHub Page</title>
-  </head>
-  <body>
-    <h1>Hello, GitHub Pages!</h1>
-    <p>This is xigeist's personal page.</p>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Music Streaming Service</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="logo">MyMusic</div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Browse</a></li>
+                <li><a href="#">Search</a></li>
+                <li><a href="#">Library</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="main-content">
+        <div class="banner">
+            <h1>Welcome to MyMusic</h1>
+            <p>Stream your favorite music anytime, anywhere.</p>
+        </div>
+
+        <div class="playlist">
+            <h2>Featured Playlists</h2>
+            <div class="playlist-item">
+                <img src="https://via.placeholder.com/150" alt="Playlist Image">
+                <h3>Chill Vibes</h3>
+            </div>
+            <div class="playlist-item">
+                <img src="https://via.placeholder.com/150" alt="Playlist Image">
+                <h3>Top Hits</h3>
+            </div>
+            <!-- More playlist items here -->
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 MyMusic. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
 </html>
